--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "express": "^4.21.2",
     "next": "~15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -14,18 +15,23 @@
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
     "@next/eslint-plugin-next": "^15.2.4",
+    "@nx/esbuild": "22.0.1",
     "@nx/eslint": "22.0.1",
     "@nx/eslint-plugin": "22.0.1",
     "@nx/js": "22.0.1",
     "@nx/next": "22.0.1",
+    "@nx/node": "^22.0.1",
     "@nx/workspace": "22.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express": "^4.17.21",
+    "@types/node": "20.19.9",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "10.4.13",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-next": "^15.2.4",
     "eslint-config-prettier": "^10.0.0",
@@ -33,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "22.0.1",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -42,6 +49,8 @@
     "typescript-eslint": "^8.40.0"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "libs/contract",
+    "libs/config"
   ]
 }
