--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,7 +2,6 @@
   "name": "@yellow-book/api",
   "version": "0.0.1",
   "private": true,
-  "type": "module",
   "nx": {
     "targets": {
       "build": {
@@ -99,15 +98,16 @@
     }
   },
   "dependencies": {
+    "@prisma/client": "^6.17.0",
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
-    "@types/node": "^20.19.9",
-    "prisma": "^6.18.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "@types/cors": "^2.8.19",
+    "prisma": "^6.17.0",
+    "tsx": "^4.20.6"
   },
   "prisma": {
-    "seed": "node --loader ts-node/esm prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   }
 }
